[project]
name = "ds-project"
version = "0.1.0"
description = ""
requires-python = "==3.12.5"
dependencies = [
    "statsmodels>=0.14.4",
    "scikit-learn>=1.7.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "matplotlib>=3.10.3",
    "torch==2.7.1",
    "pyarrow==20.0.0",
    "fastparquet==2024.11.0"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240909",
    "scipy-stubs>=1.14.1.3",
]

